/// <summary> ConstructionBaseに付けるインターフェース </summary>
public interface IConstruction
{
    /// <summary>  </summary>
    void Build();
    /// <summary>  </summary>
    void Effect();
}
