using UnityEngine;

/// <summary>
/// 兵士育成所からキャンプに歩いていき、重ならない配置でいい感じに待機する。
/// マップを適当に徘徊してもよい。
/// 価格：１００G　作成上限数：キャンプの数*50
/// </summary>
public class Soldier : UnitBase
{
    void Start()
    {
    }

    void Update()
    {
    }


    public override void Move()
    {
        throw new System.NotImplementedException();
    }

    public override void Action()
    {
        throw new System.NotImplementedException();
    }
}