using UnityEngine;

/// <summary>
/// 工員のクラス
/// 最初に1人かならずいる。
/// 施設の建設時に建設予定地に移動し、建物を建設する。
/// マップを適当に徘徊してもよい。
/// </summary>
public class Worker : UnitBase
{
    void Start()
    {
    }

    void Update()
    {
    }

    public override void Move()
    {
        throw new System.NotImplementedException();
    }

    public override void Action()
    {
        throw new System.NotImplementedException();
    }
}