/// <summary>
/// 戦争のインターフェース
/// </summary>
public interface IWar
{
    public void StartWave();
    public void EndWave();
}